right layout bug fixed

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -68,6 +68,9 @@ p {
 .hidden {
 	visibility: hidden !important;
 }
+.display-none {
+	display: none !important;
+}
 
 .r-border {
 	border: none !important;
